# tf-quickstart

./: Makefile  README.md  pyproject.toml
src/: __main__.py
