[tool.poetry]
name = "tf-quickstart"
version = "0.0.1"
description = "learning tensorflow via quickstart"
authors = ["Jameson Stone <jameson@stone.tc>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
